# M5stickC-IDF

./: sdkconfig  sdkconfig.defaults
components/axp192/: CMakeLists.txt  axp192.c  axp192.h
components/m5stickc/: CMakeLists.txt  button.c  button.h  m5stickc.c  m5stickc.h
components/mpu6886/: CMakeLists.txt  Kconfig  mpu6886.c  mpu6886.h  mpu6886_config.h
components/spm1423/: CMakeLists.txt
components/st7735s/: CMakeLists.txt  spi_master_lobo.h  tft.c  tft.h  tftspi.c
components/st7735s/font/: default_tiny_9pt.c
components/wire/: CMakeLists.txt  Kconfig  wire.c  wire.h  wire_config.h
main/: Kconfig.projbuild  m5stick_demo.c
